<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Heading"
                android:padding="10sp"
                android:background="@color/colorAccent"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textAppearance="@android:style/TextAppearance.Large"/>

            <ImageView
                android:id="@+id/dodo"
                android:layout_width="match_parent"
                android:layout_height="273dp"
                android:src="@drawable/ban" />

            <TextView
                android:id="@+id/SubHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Heading"
                android:textAppearance="@android:style/TextAppearance"
                android:text="@string/SubHeading"
                android:padding="@dimen/padding_regular"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/SubHeading"
                android:lineSpacingExtra="5sp"
                android:text="@string/article"
                android:textSize="15sp"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>