<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/bengkel1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/motorcycle" />

                <TextView
                    android:id="@+id/vnama"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/bengkel1"
                    android:text="@string/bengkel"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/valamat"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/vnama"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="3dp"
                    android:layout_toRightOf="@+id/bengkel1"
                    android:text="@string/alamat_bengkel"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/vkontak"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/valamat"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="3dp"
                    android:layout_toRightOf="@+id/bengkel1"
                    android:text="@string/kontak_bengkel"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/vrating"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/vkontak"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="3dp"
                    android:layout_toRightOf="@+id/bengkel1"
                    android:text="@string/rating"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/detail"
                style="@style/Widget.AppCompat.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_arrow"
                android:tint="@color/colorPrimary" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>